Task5/deployment-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-deploy
  labels:
    app: admin-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front-end
  template:
    metadata:
      labels:
        app: admin-front-end
        role: admin-front-end
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-srv
  labels:
    app: admin-front-end
    role: admin-front-end
spec:
  type: ClusterIP
  selector:
    app: admin-front-end
  ports:
    - protocol: TCP
      port: 82
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-deploy
  labels:
    app: admin-back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-back-end-api
  template:
    metadata:
      labels:
        app: admin-back-end-api
        role: admin-back-end-api
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 83

---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-srv
  labels:
    app: admin-back-end-api
    role: admin-back-end-api
spec:
  type: ClusterIP
  selector:
    app: admin-back-end-api
  ports:
    - protocol: TCP
      port: 83
      targetPort: 80
