Task5/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deploy
  labels:
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
        role: front-end
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-srv
  labels:
    app: front-end
spec:
  type: ClusterIP
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api-deploy
  labels:
    app: back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end-api
  template:
    metadata:
      labels:
        app: back-end-api
        role: back-end-api
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-srv
  labels:
    app: back-end-api
    role: back-end-api
spec:
  type: ClusterIP
  selector:
    app: back-end-api
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
